--- a/template_content/README.md.jinja
+++ b/template_content/README.md.jinja
@@ -41,63 +41,63 @@ This project has been generated using AlgoKit. See below for default getting sta
 2. Follow step 3 above
 
 {% if use_github_actions -%}
-### Continuous Integration
+### Continuous Integration / Continuous Deployment (CI/CD)
 
-  This project uses [GitHub actions](https://docs.github.com/en/actions/learn-github-actions/understanding-github-actions) to define CI/CD workflows, which are located in the  `.github/workflows` folder.
+This project uses [GitHub Actions](https://docs.github.com/en/actions/learn-github-actions/understanding-github-actions) to define CI/CD workflows, which are located in the [`.github/workflows`](./.github/workflows) folder.
 
-#### Setting up GitHub for CI/CD workflow and Testnet deployment
+#### Setting up GitHub for CI/CD workflow and TestNet deployment
 
-  1. Build and commit smart contract artifacts for output stability
+  1. Every time you have a change to your smart contract, and when you first initialise the project you need to [build the contract](#initial-setup) and then commit the `smart_contracts/artifacts` folder so the [output stability](https://github.com/algorandfoundation/algokit-cli/blob/main/docs/articles/output_stability.md) tests pass
 {%- if deployment_language == 'python' %}
-  2. Decide what values you want to use for the `allow_update` and `allow_delete` parameters specified in `config.py`
-     When deploying to LocalNet these values are both set to `True` for convenience. But for non-LocalNet networks
-     they are more conservative and use `False`
+  2. Decide what values you want to use for the `allow_update`, `allow_delete` and the `on_schema_break`, `on_update` parameters specified in [`config.py`](./smart_contracts/config.py).
+     When deploying to LocalNet these values are both set to allow update and replacement of the app for convenience. But for non-LocalNet networks
+     the defaults are more conservative.
 {%- elif deployment_language == 'typescript' %}
   2. Decide what values you want to use for the `allowUpdate` and `allowDelete` parameters specified in `deploy-config.ts`
      When deploying to LocalNet these values are both set to `true` for convenience. But for non-LocalNet networks
      they are more conservative and use `false`
 {%- endif %}
-     These default values will allow the smart contract to be deployed initially, but will not allow the app to be updated or deleted if is changed.
-     To help you decide it may be helpful to read the following [AlgoKit documentation](https://github.com/algorandfoundation/algokit-cli/blob/main/docs/architecture-decisions/2023-01-12_smart-contract-deployment.md#upgradeable-and-deletable-contracts)
-  3. Create a [Github environment](https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#creating-an-environment) named `Test`
-  4. Create or obtain the mnemonic for an Algorand account for use on testnet to deploy apps, referred to as the Deployer account
+     These default values will allow the smart contract to be deployed initially, but will not allow the app to be updated or deleted if is changed and the build will instead fail.
+     To help you decide it may be helpful to read the [AlgoKit Utils app deployment documentation](https://github.com/algorandfoundation/algokit-utils-ts/blob/main/docs/capabilities/app-deploy.md) or the [AlgoKit smart contract deployment architecture](https://github.com/algorandfoundation/algokit-cli/blob/main/docs/architecture-decisions/2023-01-12_smart-contract-deployment.md#upgradeable-and-deletable-contracts).
+  3. Create a [Github Environment](https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#creating-an-environment) named `Test`.
+     Note: If you have a private repository and don't have GitHub Enterprise then Environments won't work and you'll need to convert the GitHub Action to use a different approach.
+  4. Create or obtain a mnemonic for an Algorand account for use on TestNet to deploy apps, referred to as the `DEPLOYER` account.
   5. Store the mnemonic as a [secret](https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#environment-secrets) `DEPLOYER_MNEMONIC`
-     in the Test environment created in step 2
+     in the Test environment created in step 3.
   6. The account used to deploy the smart contract will require enough funds to create the app, and also fund it. There are two approaches available here:
      * Either, ensure the account is funded outside of CI/CD.
 
-       In Testnet, funds can be obtained by using the [Algorand testnet dispenser](https://bank.testnet.algorand.network/)
-       The funds can either be transferred to the Deployer account
-     * Or, fund the account as part of the CI/CD process by using the `DISPENSER_MNEMONIC` secret.
-       This secret can be defined in GitHub and will then be used to fund the Deployer account before deploying.
+       In Testnet, funds can be obtained by using the [Algorand TestNet dispenser](https://bank.testnet.algorand.network/) and we recommend provisioning 50 ALGOs.
+     * Or, fund the account as part of the CI/CD process by using a `DISPENSER_MNEMONIC` GitHub Environment secret to point to a separate `DISPENSER` account that you maintain ALGOs in (similarly, you need to provision ALGOs into this account using the [TestNet dispenser](https://bank.testnet.algorand.network/)).
 
-For pull requests against this repository the following checks are performed by GitHub Actions:
+#### Continuous Integration
+
+For pull requests and pushes to `main` branch against this repository the following checks are automatically performed by GitHub Actions:
 {%- if use_python_pip_audit %}
- - Python dependencies using pip-audit
+ - Python dependencies are audited using [pip-audit](https://pypi.org/project/pip-audit/)
 {%- endif %}
 {%- if use_python_black %}
- - Formatting using Black
+ - Code formatting is checked using [Black](https://github.com/psf/black)
 {%- endif %}
 {%- if python_linter == 'ruff' %}
- - Linting using Ruff
+ - Linting is checked using [Ruff](https://github.com/charliermarsh/ruff)
 {%- elif python_linter == 'flake8' %}
- - Linting using flake8
+ - Linting is checked using [Flake8](https://flake8.pycqa.org/en/latest/)
 {%- endif %}
 {%- if use_python_mypy %}
- - Types using MyPy
+ - Types are checked using [mypy](https://mypy-lang.org/)
 {%- endif %}
 {%- if use_python_pytest %}
- - Python tests are executed
+ - Python tests are executed using [pytest](https://docs.pytest.org/)
 {%- endif %}
  - Smart contract artifacts are built
- - Smart contract artifacts are checked for [output stability](https://github.com/algorandfoundation/algokit-cli/blob/main/docs/articles/output_stability.md).
+ - Smart contract artifacts are checked for [output stability](https://github.com/algorandfoundation/algokit-cli/blob/main/docs/articles/output_stability.md)
  - Smart contract is deployed to a AlgoKit LocalNet instance
 
 ### Continuous Deployment
 
-After merging the following actions are performed
-  - Continuous Integration checks are re-run
-  - Smart contract is deployed to testnet using [algonode](https://algonode.io)
+For pushes to `main` branch, after the above checks pass, the following deployment actions are performed:
+  - The smart contract(s) are deployed to TestNet using [AlgoNode](https://algonode.io).
 
 {%- endif %}
 
@@ -120,10 +120,18 @@ This project makes use of Python to build Algorand smart contracts. The followin
 - [Flake8](https://flake8.pycqa.org/en/latest/): A Python linter for style guide enforcement.
 {% endif %}
 - [mypy](https://mypy-lang.org/): Static type checker.
+{%- if use_python_pytest %}
+- [pytest](https://docs.pytest.org/): Automated testing.
+{%- endif %}
+{%- if use_python_pip_audit %}
+ - [pip-audit](https://pypi.org/project/pip-audit/): Tool for scanning Python environments for packages with known vulnerabilities.
+{%- endif %}
 {%- if deployment_language == "typescript" %}
 - [npm](https://www.npmjs.com/): Node.js package manager
 - [TypeScript](https://www.typescriptlang.org/): Strongly typed programming language that builds on JavaScript
 - [ts-node-dev](https://github.com/wclr/ts-node-dev): TypeScript development execution environment
 {% endif -%}
 
-It has also been configured to have a productive dev experience out of the box in VS Code, see the [.vscode](./.vscode) folder.
+{% if ide_vscode %}
+It has also been configured to have a productive dev experience out of the box in [VS Code](https://code.visualstudio.com/), see the [.vscode](./.vscode) folder.
+{% endif %}
